*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,6 @@ Oliver Obst <fruit@uni-koblenz.de>
 Pat Riley <pfr@cs.cmu.edu>
 Tom Howard <tomhoward@users.sf.net>
 Heni Ben Amor <amor@uni-koblenz.de>
+Irene Markelic <irene@markelic.de>
 
 Also see files ChangeLog and THANKS.
