--- a/THANKS
+++ b/THANKS
@@ -13,3 +13,4 @@ Markus Gründler <mgruendler@gmx.de>
 Patrick Riley <pfr+@cs.cmu.edu>
 Christoph Ringelstein <cringel@uni-koblenz.de>
 Kenny Tilton <ktilton@nyc.rr.com>
+Micha Gollin <gollin@informatik.hu-berlin.de>
