--- a/doc/devel/manual.tex
+++ b/doc/devel/manual.tex
@@ -1,5 +1,5 @@
 %%
-%% $Id: manual.tex,v 1.3 2004/01/26 22:05:46 gato_negro Exp $
+%% $Id: manual.tex,v 1.1 2004/05/12 16:25:25 fruit Exp $
 %%----------------------------------------------------------
 %% Soccer Server (aka RoboCup Soccer Simulator) Manual
 %% Masterfile
