--- a/doc/devel/manual.tex
+++ b/doc/devel/manual.tex
@@ -1,5 +1,5 @@
 %%
-%% $Id: manual.tex,v 1.1 2004/05/12 16:25:25 fruit Exp $
+%% $Id: manual.tex,v 1.2 2004/05/13 21:17:26 fruit Exp $
 %%----------------------------------------------------------
 %% Soccer Server (aka RoboCup Soccer Simulator) Manual
 %% Masterfile
@@ -7,7 +7,7 @@
 
 \documentclass[a4paper,11pt]{scrbook}
 \usepackage{graphicx}
-\usepackage{styles/bibunits}
+\usepackage{bibunits}
 \usepackage{pifont}
 \usepackage{textcomp}
 \usepackage{url}
