--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-05-14  Oliver Obst  <fruit@robolog.org>
 
+	* released rcssserver3D-0.2.2
+
 	* app/agentspark/Makefile.am: 
 	- added header files to the list of sources
 
