--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-03  Patrick Riley <pfr@cs.cmu.edu>
+	* app/rcssmonitor3d/lite/monitor.cpp
+	- Added #include <sstream> and std:: namespace qualifiers
+	(reported by Michel Tokic)
+	
 2004-05-24  Patrick Riley <pfr@cs.cmu.edu>
 
 	* lib/oxygen/spadesserver/spadesserver.cpp:
