--- a/TODO
+++ b/TODO
@@ -15,15 +15,19 @@ For later:
   for the existence of a contact joint between the object and the
   ground, for example.
 
+- better distinguish between soccer rules (in SoccerRuleAspect) and the 
+  game state (in GameStateAspect). The methods to move objects (currently
+  in SoccerRuleAspect) should go to the GameStateAspect.
+
 For 0.3:
 
-- add kick off selection to monitor (left/right/random)
 - The default LogServer behavior is to open cout for eAll. When an application
   wants to change this, zeitgeist sent already some Debug messages, which may
   be desired or not. The application should be able to change this as well.
 
 Done:
 
+- add kick off selection to monitor (left/right/random)
 - add rule to get rid of this message (ScriptServer) ERROR: Unknown function 'RuleFreeKickPauseTime'
 - adjust goal height (and the goal flags position in the lite monitor)
 - remove error message 'failed to get Class object for 'ClassClass0x804ad24'...#
